<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PlayerDemo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="zhandianwangzhi">domain</string>
    <string name="bianhao">number</string>
    <string name="zhandian">account</string>
    <string name="zhandianpassword">pwd</string>
    <string name="roomnickname">nickName</string>
    <string name="roompassword">joinPwd</string>
    <string name="join_reconnecting">网络不给力,重连中...</string>
    <string name="exit">退出</string>
    <string name="webcast_type">webcast</string>
    <string name="training_type">training</string>
    <string name="public_chat">公聊</string>
    <!-- vod -->
    <string name="editvoddomin">请输入站点</string>
    <string name="editvodnumble">请输入编号</string>
    <string name="editvodnicknam">请输入昵称</string>
    <string name="editvodaccount">请输入登录帐号</string>
    <string name="editvodloginpassword">请输入登录密码</string>
    <string name="editvodpassword">请输入点播密码</string>
    <string name="init">init</string>
    <string name="chapter_list_btn">章节列表</string>
    <string name="chapter_title">章节：</string>
    <string name="doc_title">文档：</string>
    <string name="chapter_time">时间：</string>
    <!-- main -->
    <string name="live">直播</string>
    <string name="vod">点播</string>
    <string name="video_close">关闭视频</string>
    <string name="video_open">打开视频</string>
    <string name="audio_close">关闭音频</string>
    <string name="audio_open">打开音频</string>
    <string name="mic_close">停止讲话</string>
    <string name="video_rate_low">低清</string>
    <string name="video_rate_nor">标清</string>
</resources>
