<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ly_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="horizontal"
    android:screenOrientation="landscape" >

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/listset1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/editvoddomin"
                android:layout_width="@dimen/input_width"
                android:layout_height="wrap_content"
                android:hint="@string/editvoddomin"
                android:shadowColor="#000000"
                android:textSize="12sp" >
            </EditText>

            <EditText
                android:id="@+id/editvodnumble"
                android:layout_width="@dimen/input_width"
                android:layout_height="wrap_content"
                android:hint="@string/editvodnumble"
                android:textSize="12sp" >
            </EditText>

            <EditText
                android:id="@+id/editvodaccount"
                android:layout_width="@dimen/input_width"
                android:layout_height="wrap_content"
                android:hint="@string/editvodaccount"
                android:shadowColor="#000000"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/editvodloginpassword"
                android:layout_width="@dimen/input_width"
                android:layout_height="wrap_content"
                android:hint="@string/editvodloginpassword"
                android:shadowColor="#000000"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/editvodnickname"
                android:layout_width="@dimen/input_width"
                android:layout_height="wrap_content"
                android:hint="@string/editvodnicknam"
                android:shadowColor="#000000"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/editvodpassword"
                android:layout_width="@dimen/input_width"
                android:layout_height="wrap_content"
                android:hint="@string/editvodpassword"
                android:shadowColor="#000000"
                android:textSize="12sp" />

            <Spinner
                android:id="@+id/Spinner01"
                android:layout_width="@dimen/input_width"
                android:layout_height="wrap_content" />

            <Spinner
                android:id="@+id/Spinner02"
                android:layout_width="@dimen/input_width"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/mbutton"
                android:layout_width="@dimen/input_width"
                android:layout_height="wrap_content"
                android:text="@string/init"
                android:textColor="#ffffff" />
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical" >

        <ListView
            android:id="@+id/progressDoc"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
        </ListView>

        <LinearLayout
            android:id="@+id/optionSelect"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center_horizontal" >

            <Button
                android:id="@+id/btnDownLoad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="download" />

            <Button
                android:id="@+id/btnDownPlay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="play" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>